--- a/src/product.css
+++ b/src/product.css
@@ -1,5 +1,5 @@
 .product {
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
@@ -8,7 +8,7 @@
   width: 100%;
   max-height: 400px;
   max-height: 100px;
-  background-color: solid white;
+  background: white;
   z-index: 1;
 }
 
@@ -16,15 +16,14 @@
   display: flex;
 }
 
-.product img {
+.product > img {
   max-height: 200px;
   width: 100%;
   object-fit: contain;
   margin: 20px 0 0 15px;
-  z-index: 1;
 }
 
-.product button {
+.product > button {
   background-color: #ff9f00;
   border: none;
   margin-top: 20 px;
@@ -35,18 +34,18 @@
   cursor: pointer;
 }
 
-.product button:hover {
+.product > button:hover {
   opacity: 0.7;
 }
 
 .product__price {
   margin-top: 5px;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .product__info {
   height: 100px;
   margin-bottom: 15px;
-  text-align: left;
-  z-index: 1;
+  /* text-align: left;
+  z-index: 1; */
 }
