--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 .home {
-  display: flex;
+  display: grid;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -15,8 +15,42 @@
 }
 
 .home__row {
-  display: flex;
+  display: grid;
   z-index: 1;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.home__row .product {
+  grid-template-areas:
+    'a b'
+    'c d e'
+    'f f f';
+  grid-gap: 1.2rem;
+  margin-bottom: 1.2rem;
+  display: inline-block;
+}
+
+.home__row .product .a {
+  grid-area: 'a';
+}
+
+.home__row .product .b {
+  grid-area: 'b';
+}
+
+.home__row .product .c {
+  grid-area: 'c';
+}
+
+.home__row .product .d {
+  grid-area: 'd';
+}
+
+.home__row .product .e {
+  grid-area: 'e';
+}
+
+.home__row .product .f {
+  grid-area: 'f';
 }
